--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="recipes/pilau.html">pilau</a></li>
         <li><a href="recipes/pancakes.html">pancakes</a></li>
-        <li><a href="recipes/sandwich.html">chickpea salad sandwich recipe</a></li>
+        <li><a href="recipes/sandwich.html">chickpea salad sandwich </a></li>
     </ul>
 </body>
 </html>
